[project]
name = "mlfinpy"
version = "0.1.2"
description = "Mlfin.py is an Advance Machine Learning toolbox for financial applications."
authors = [{ name = "Robert Bach", email = "robert@quantfin.net" }]
requires-python = "~=3.11"
readme = "README.rst"
license = "MIT"
keywords = [
    "finance",
    "machine learning",
    "algorithmic trading",
    "quant",
    "investing",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "numpy>=1.22",
    "numba>=0.60.0",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
optionals = ["scikit-learn>=1.5.2,<2"]

[project.urls]
Repository = "https://github.com/baobach/mlfinpy"
Documentation = "https://mlfinpy.readthedocs.io/en/latest/"
Issues = "https://github.com/baobach/mlfinpy/issues"
"Personal website" = "https://quantfin.net"

[dependency-groups]
dev = [
    "pytest>=7.1",
    "pytest-cov>=4.0",
    "flake8>=4.0.1,<5",
    "black>=24.8.0,<25",
    "isort>=5.13.2,<6",
    "pre-commit>=3.8.0,<4",
    "sphinx>=8.0.2,<9",
    "furo>=2024.8.6,<2025",
]

[tool.hatch.build.targets.sdist]
include = ["mlfinpy"]

[tool.hatch.build.targets.wheel]
include = ["mlfinpy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
